--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,6 @@
-MONGODB_URI = mongodb+srv://diegotorres11:aCljStNR9of8uZhi@portfoliosolicitudes.zim6muz.mongodb.net/?retryWrites=true&w=majority&appName=PortfolioSolicitudes
+MONGODB_URI = mongodb+srv://diegotorres11:aCljStNR9of8uZhi@portfoliosolicitudes.zim6muz.mongodb.net/
+
+
+
+
+
