--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,13 +10,13 @@
   "author": "Diego Torres",
   "license": "ISC",
   "dependencies": {
+    "@getbrevo/brevo": "^2.1.1",
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
-    "resend": "^3.3.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
