--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@getbrevo/brevo": "^2.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-multiparty": "^2.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "validator": "^13.12.0"
   },
