--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "diacritics": "^1.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
