--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@justinribeiro/lite-youtube": "^1.6.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
