--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "puppeteer": "^23.11.1",
     "socket.io": "^4.8.0",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
