--- a/Backend/DockerFile
+++ b/Backend/DockerFile
@@ -3,8 +3,10 @@ FROM ghcr.io/puppeteer/puppeteer:23.11.1
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
     PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome
 
-WORKDIR /usr/src/app
-COPY package*.json ./
-RUN npm install
+WORKDIR /usr/scr/app
+
+COPY  package*.json ./
+RUN npm ci
+
 COPY . .
 CMD ["node", "index.js"]
