--- a/Backend/DockerFile
+++ b/Backend/DockerFile
@@ -1,12 +1,37 @@
-FROM ghcr.io/puppeteer/puppeteer:23.11.1
+FROM node:18.20.3
 
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome
+# Install necessary dependencies for Puppeteer and Chromium
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  fonts-liberation \
+  libasound2 \
+  libatk-bridge2.0-0 \
+  libatk1.0-0 \
+  libcups2 \
+  libdrm2 \
+  libgbm1 \
+  libgtk-3-0 \
+  libnspr4 \
+  libnss3 \
+  libx11-xcb1 \
+  libxcomposite1 \
+  libxdamage1 \
+  libxrandr2 \
+  xdg-utils \
+  libu2f-udev \
+  libxshmfence1 \
+  libglu1-mesa \
+  chromium \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /usr/scr/app
-
-COPY  package*.json ./
-RUN npm ci
-
+WORKDIR /app
+COPY ./package.json ./
+RUN npm install
 COPY . .
+EXPOSE 3000
+
+# Puppeteer setup: Skip Chromium download and use the installed Chromium
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+ENV PUPPETEER_EXECUTABLE_PATH="/usr/bin/chromium"
+
 CMD ["node", "index.js"]
