--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "puppeteer": "^23.11.1",
     "socket.io": "^4.8.0",
     "validator": "^13.12.0",
+    "web-push": "^3.6.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
